--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "body-parser": "~1.19.0",
     "chalk": "^2.4.1",
     "compression": "~1.7.4",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-airbnb-typescript": "^5.1.0",
-    "eslint-plugin-import": "^2.20.2",
     "express": "~4.16.4",
     "genome-app": "^0.0.8",
     "glob": "^7.1.2",
@@ -48,11 +44,10 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/chai-things": "^0.0.34",
     "@types/compression": "^1.7.0",
-    "@types/eslint": "^6.1.2",
     "@types/express": "^4.16.1",
     "@types/express-serve-static-core": "^4.16.1",
     "@types/helmet": "^0.0.45",
-    "@types/jsonwebtoken": "^8.3.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.144",
     "@types/method-override": "^0.0.31",
     "@types/mocha": "^7.0.1",
@@ -65,13 +60,17 @@
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/socket.io-redis": "^1.0.25",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "cross-env": "^5.2.0",
-    "eslint-plugin-mocha": "^5.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^6.0.0",
     "mocha": "^6.0.2",
     "mocha-chai-snapshot": "git+https://github.com/vedi/mocha-chai-snapshot.git#b210622fad3a741923527c8ac8d32bf5e5104bc3",
     "mocha-prepare": "^0.1.0",
@@ -82,7 +81,7 @@
   },
   "engines": {
     "node": "12.x.x",
-    "yarn": "1.21.x"
+    "yarn": "1.x.x"
   },
   "license": "MIT",
   "name": "restifizer-starter-backend",
